force-app/main/default/objects/dsfs__CustomParameterMap__c/fields/dsfs__EnvelopeConfiguration__c.field-meta.xml
<CustomField>
    <fullName>dsfs__EnvelopeConfiguration__c</fullName>
    <description>DocuSign Envelope Configuration</description>
    <inlineHelpText>DocuSign Envelope Configuration</inlineHelpText>
    <label>DocuSign Envelope Configuration</label>
    <referenceTo>dsfs__EnvelopeConfiguration__c</referenceTo>
    <relationshipName>CustomParameterMaps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>