force-app/main/default/objects/dsfs__CustomParameterMap__c/fields/dsfs__LongValue__c.field-meta.xml
<CustomField>
    <fullName>dsfs__LongValue__c</fullName>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>